small-fix to item to stop stretching across screen

--- a/sass/assets/_global-windows.scss
+++ b/sass/assets/_global-windows.scss
@@ -22,8 +22,9 @@
   box-shadow: v.$boxshadow;
 }
 
-.sheet {
+.essence20 .sheet {
   min-width: fit-content;
+  max-width: 55%;
  }
 
 .actor {
